--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 prepros-6.config
 config.codekit
 config.codekit
+
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
