Ignore file "underhållsplan.jpg"

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ prepros.config
 .DS_Store
 assets/img/backgrounds/underhållsplan.jpg
 assets/img/backgrounds/underhållsplan.jpg
+assets/img/backgrounds/underhållsplan.jpg
